# robot_sorting_agent_langgraph

./: .env.example  .env.siliconflow.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: EVALUATION_REPORT_CN.md  PROJECT_EXPLANATION_CN.md
samples/: benchmark_cases.jsonl  eval_cases.jsonl  request_basic.json  request_feedback.json  request_my_test.json  request_test.json  request_yolo_real.json
scripts/: download_grounded_sam_models.py  generate_eval_cases.py  prepublish_check.py  run_eval.py
src/robot_sorting_agent/: api.py  cli.py  compat_langgraph.py  execution.py  graph.py  image_utils.py  langchain_adapter.py  llm.py  observability.py  payloads.py  perception.py  planning.py  prompts.py  schemas.py  segmentation.py  settings.py
tests/: test_smoke.py
